--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "box-node-sdk": "^3.6.0",
     "express": "^4.19.2",
-    "googleapis": "^140.0.0"
+    "googleapis": "^140.0.0",
+    "uuid": "^10.0.0"
   }
 }
