--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ThatLittleChicken/makerspace-queue#readme",
   "dependencies": {
     "box-node-sdk": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^140.0.0",
     "uuid": "^10.0.0"
